[tool.poetry]
name = "twine-merger"
version = "0.1.0"
description = "A simple script to merge different branch of the same Twine story"
authors = ["Alessio Cimarelli <alessio.cimarelli@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
